# precision-location-lite-client

./: CMakeLists.txt  README.md  version.h
contrib/md4/: CMakeLists.txt  md4.h  md4c.c
include/api/: skyhookliteclient.h
include/spi/: Assert.h  CellAdapter.h  CellTower.h  Concurrent.h  DOM.h  ErrorCodes.h  GPSAdapter.h  GPSData.h  Logger.h  MAC.h  ScannedAccessPoint.h  ScannedCellTower.h  StdLibC.h  StdMath.h  SystemInformation.h  Thread.h  Time.h  WifiAdapter.h  XmlHttpRequest.h  XmlParser.h  doxygen.h
samples/: CMakeLists.txt  skyhooklitetest.cpp
src/api/: CMakeLists.txt  Protocol.cpp  Protocol.h  Wrappers.cpp  Wrappers.h  skyhookliteclient.cpp
src/spi/: CMakeLists.txt  spi.cmake
src/spi/assert/: CMakeLists.txt
src/spi/assert/null/: CMakeLists.txt  NoAssert.cpp
src/spi/assert/unix/: CMakeLists.txt  UnixAssert.cpp
src/spi/cell/: CMakeLists.txt
src/spi/cell/null/: CMakeLists.txt  NoCellAdapter.cpp
src/spi/cell/ofono/: CMakeLists.txt  GlibCellWrapper.h  OfonoCellAdapter.cpp
src/spi/cell/static/: CMakeLists.txt  StaticCellAdapter.cpp
src/spi/concurrent/: CMakeLists.txt
src/spi/concurrent/pthread/: CMakeLists.txt  PthreadConcurrent.cpp
src/spi/gps/: CMakeLists.txt  GPSData.cpp
src/spi/gps/null/: CMakeLists.txt  NoGPSAdapter.cpp
src/spi/gps/protocol/: CMakeLists.txt  GPSProtocol.cpp  GPSProtocol.h
src/spi/gps/protocol/nmea/: NMEAProtocol.cpp  NMEAProtocol.h
src/spi/gps/protocol/sirf/: SirfProtocol.cpp  SirfProtocol.h
src/spi/gps/serial/: CMakeLists.txt  SerialGPSAdapter.h  SerialPort.h
src/spi/gps/serial/unix/: CMakeLists.txt  UnixSerialPort.cpp
src/spi/gps/static/: CMakeLists.txt  StaticGPSAdapter.cpp
src/spi/gps/unixserial/: CMakeLists.txt  UnixSerialGPSAdapter.cpp
src/spi/logger/: CMakeLists.txt  Logger.cpp
src/spi/logger/null/: CMakeLists.txt  NullLogger.cpp
src/spi/logger/stdout/: CMakeLists.txt  StdoutLogger.cpp
src/spi/stdlibc/: CMakeLists.txt
src/spi/stdlibc/unix/: CMakeLists.txt  UnixStdLibC.cpp
src/spi/stdmath/: CMakeLists.txt
src/spi/stdmath/unix/: CMakeLists.txt  UnixStdMath.cpp
src/spi/systeminfo/: CMakeLists.txt
src/spi/systeminfo/linux/: CMakeLists.txt  LinuxSystemInformation.cpp
src/spi/systeminfo/null/: CMakeLists.txt  NoSystemInformation.cpp
src/spi/thread/: CMakeLists.txt
src/spi/thread/pthread/: CMakeLists.txt  PthreadThread.cpp
src/spi/time/: CMakeLists.txt
src/spi/time/unix/: CMakeLists.txt  UnixTime.cpp
src/spi/utils/nmea/: CMakeLists.txt
src/spi/utils/nmea/include/nmea/: Dataset.h  Fields.h  Info.h  NMEA.h  Types.h  Units.h  Variant.h
src/spi/utils/nmea/src/: GGA.h  GLL.h  GSA.h  GSA1.h  GSV.cpp  GSV.h  NMEA.cpp  RMC.h  RMC1.h  Sentence.cpp  Sentence.h  Token.h  Tokens.h
src/spi/utils/nmea/test/: CMakeLists.txt  test.cpp
src/spi/utils/unix/: ErrnoConv.h  iconvert.h
src/spi/utils/unix/glib/: GlibMainLoopDispatcher.h  GlibMainLoopThread.h
src/spi/utils/xml/: XmlUtils.cpp  XmlUtils.h
src/spi/wifi/: CMakeLists.txt  MAC.cpp
src/spi/wifi/nl80211/: CMakeLists.txt  Nl80211WifiAdapter.cpp
src/spi/wifi/static/: CMakeLists.txt  StaticWifiAdapter.cpp
src/spi/xhr/: CMakeLists.txt
src/spi/xhr/curl/: CMakeLists.txt  CurlXmlHttpRequest.cpp
src/spi/xml/: CMakeLists.txt
src/spi/xml/libxml/: CMakeLists.txt  LibxmlDOM.cpp  LibxmlDOM.h  LibxmlParser.cpp  LibxmlParser.h
