cmake_minimum_required(VERSION 2.6)
project(wpsspi-lite)

add_subdirectory(assert)
add_subdirectory(concurrent)
add_subdirectory(logger)
add_subdirectory(xml)
add_subdirectory(stdlibc)
add_subdirectory(stdmath)
add_subdirectory(thread)
add_subdirectory(time)
add_subdirectory(wifi)
add_subdirectory(gps)
add_subdirectory(xhr)
add_subdirectory(cell)
add_subdirectory(systeminfo)
